[package]
name = "convolution_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
